--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -1,1 +1,89 @@
+.maintitle {
+    margin:50px;
+}
 
+.hugeimage{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-image: url('./museum.png');
+    background-size: cover;
+}
+
+.overlay{
+    color: white;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+/* search bar */
+form {
+    border-radius: 20px;
+    border: 3px solid black;
+    position: relative;
+    margin-top:120px;
+}
+input {
+    display: block;
+    border-radius: 20px;
+    font-size: 20px;
+    height: 100%;
+    width:100%;
+    padding: 8px 40px 8px 20px;
+    border: none;
+    box-shadow: black;
+}
+
+input:focus{
+    outline: none;
+}
+
+button{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50px;
+    height: 100%;
+    border-radius: 50%;
+    cursor: pointer;
+    border: none;
+    font-size: 18px;
+    background-color: white;
+}
+
+button:hover i{
+    color: black;
+}
+
+
+/* Museum description field */
+.container {
+    align-items: center;
+    padding: 20px;
+    background: rgba(211,211,211,0.5);
+    text-align: center;
+    border-radius: 5px;
+    margin-top: 40px;
+}
+
+/* styling icons*/
+.iconstyle{
+    bottom: 10px;
+    width: 100%;
+    font-size: 30px;
+    left: 45%;
+    position: fixed;
+    align-items: center;
+}
+
+.iconstyle:hover{
+    opacity: 0.7;
+    text-decoration: none;
+}
+
+.fa-instagram, .fa-facebook, .fa-twitter, .fa-telegram {
+    background: transparent;
+    color: white;
+    margin-right: 15px;
+}
