--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -80,11 +80,29 @@ button:hover i{
     color: white;
     margin-right: 15px;
 }
+
+/* Questionnaire CSS */
 #submit-button-text {
   margin: 10px 10px 10px 10px;
   font-size: 20px;
+  color: #FFFFFF;
 }
 .question {
   margin: 10px 10px 10px 10px;
   padding-top: 10px;
+  color: #FFFFFF;
+}
+#questionnaire-title {
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 65px;
+line-height: 79px;
+text-align: center;
+
+color: #FFFFFF;
+
+}
+.labelQ {
+  color: #FFFFFF;
 }
