--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -17,7 +17,7 @@ form {
     position: relative;
     margin-top:120px;
 }
-input {
+.searchbox input {
     display: block;
     border-radius: 20px;
     font-size: 20px;
@@ -79,5 +79,34 @@ button:hover i{
     background: transparent;
     color: white;
     margin-right: 15px;
+}
+
+/* Questionnaire CSS */
+#submit-button-text {
+  margin: 10px 10px 10px 10px;
+  font-size: 20px;
+  color: #FFFFFF;
+}
+.question {
+  margin: 10px 10px 10px 10px;
+  padding-top: 10px;
+  color: #FFFFFF;
+}
+#question-page h1 {
+  color: white;
+}
+#questionnaire-title {
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 65px;
+line-height: 79px;
+text-align: center;
+
+color: #FFFFFF;
+
+}
+.labelQ {
+  color: #FFFFFF;
 }
 
