stlyed the page further

--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -105,3 +105,12 @@ color: #FFFFFF;
 .labelQ {
   color: #FFFFFF;
 }
+#exampleFormControlTextarea1 {
+  width: 40%;
+}
+#Select1 {
+  width: 40%;
+}
+#question-page {
+  margin-left: 50px;
+}
