--- a/Project/CSS/scroll.css
+++ b/Project/CSS/scroll.css
@@ -49,16 +49,19 @@ body {
   margin-left: -25%;
 }
 .slick-slide .slide-title {
-  margin-top: 10%;
+  margin-top: 2%;
   margin-bottom: 15px;
 }
 .slick-slide .slide-description {
   margin-top: 0;
+  background: rgba(211,211,211,0.5);
+  height: 15vh;
 }
 .slick-slide img {
   width: 100%;
   height: 15vw;
   object-fit: cover;
+  border-radius: 2vw;
 }
 .slick-slide.active .slide-title, .slick-slide.active .slide-description {
   opacity: 1;
