--- a/Project/CSS/style.css
+++ b/Project/CSS/style.css
@@ -16,7 +16,7 @@
     background: rgba(211,211,211,0.5);
     text-align: center;
     border-radius: 5px;
-    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 /* styling icons*/
