--- a/Project/CSS/scroll.css
+++ b/Project/CSS/scroll.css
@@ -91,8 +91,10 @@ body {
 .slider-nav {
   text-align: center;
   padding-top: 10px;
-  position: relative;
+  position: fixed;
+  bottom: 2vh;
   z-index: 2;
+  width: 100%;
 }
 .slider-nav button {
   margin: 0 10px;
